# NeevDB

./: .gitignore  README.md  api.py  dashboard.html  pypoject.toml  pyproject.toml  setup.py  start.py
documentation/: main.html
neevdb/: __init__.py  cli.py  core.py  query.py  server.py  storage.py
tests/: test_core.py
