[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neevdb"
version = "3.0.3"
authors = [
  { name = "Manish Dange" },
]
description = "A lightweight file-based database engine built with pure Python"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["database", "json", "lightweight", "sql", "query", "engine", "rest", "api"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
]

dependencies = []

[project.optional-dependencies]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[project.urls]
Homepage      = "https://github.com/manish780386/NeevDB"
Repository    = "https://github.com/manish780386/NeevDB"
"Bug Tracker" = "https://github.com/manish780386/NeevDB/issues"

[project.scripts]
neevdb = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neevdb*"]